Bug 83671 - Fileopen XLSX: SmartArt is not displayed
Summary: Fileopen XLSX: SmartArt is not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.1.2 release
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.5.0
Keywords: filter:xlsx
: 138283 (view as bug list)
Depends on:
Blocks: OOXML-SmartArt
  Show dependency treegraph
 
Reported: 2014-09-09 13:44 UTC by squeezechart
Modified: 2022-10-29 12:49 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
demo.xlsx (84.56 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-09-09 13:44 UTC, squeezechart
Details
Demo compared MSO LO (265.80 KB, image/png)
2019-10-01 08:52 UTC, Timur
Details
perhaps solution for case metafile (1023 bytes, patch)
2022-10-24 14:41 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description squeezechart 2014-09-09 13:44:18 UTC
Created attachment 105983 [details]
demo.xlsx

when opening this XLSX the SmartArt (blue object with words alpha, beta, gamma in it) is not displayed.

spreadsheet opened in Excel 2010: http://www.squeezechart.com/excel.png
spreadsheet opened in alc 4.3.1.2: http://www.squeezechart.com/calc.png
Comment 1 Jacques Guilleron 2014-09-09 15:52:46 UTC
Hi squeezechart,

The Object was inported and can be found in the navigator, but as a very small empty square anchored to cell A1, not handable.
Reproduced with LO 4.3.1.2 Build ID: 958349dc3b25111dbca392fbc281a05559ef6848 & Windows 7 Home Premium.

I set status to NEW.
Comment 2 squeezechart 2015-06-10 10:40:04 UTC Comment hidden (obsolete)
Comment 3 Muhammet Kara 2016-06-09 11:47:16 UTC
The issue still exists with LibreOffice 5.3.0.0.alpha0 (master) tested today on 64-bit Pardus Kurumsal 5 / Debian 8.
Comment 4 squeezechart 2016-09-20 12:45:51 UTC Comment hidden (obsolete)
Comment 5 squeezechart 2017-12-18 10:58:33 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2018-12-19 03:51:31 UTC Comment hidden (obsolete)
Comment 7 Roman Kuznetsov 2018-12-19 13:14:39 UTC
still repro in

Version: 6.3.0.0.alpha0+
Build ID: 2b9739b9b009de93efa4f24995469c3bb9d82261
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-18_23:09:56
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 8 squeezechart 2019-09-27 06:22:53 UTC Comment hidden (obsolete)
Comment 9 Timur 2019-10-01 08:52:22 UTC
Created attachment 154669 [details]
Demo compared MSO LO

Not seen in LO even if resaved in MSO, so not an issue with SmartArt version.
Comment 10 squeezechart 2020-11-23 09:21:53 UTC
still present in LibreOffice 7.1.0 alpha 1
Comment 11 howardellis 2021-04-21 06:10:31 UTC Comment hidden (spam)
Comment 12 Regina Henschel 2021-04-22 11:58:17 UTC
The error still exists in Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1b1a9c6c12ebe4cac19e34ff5e4818998bbb2537
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 13 Mandi Wood 2022-04-03 10:20:34 UTC Comment hidden (spam)
Comment 14 Jason Adams 2022-04-21 17:01:33 UTC Comment hidden (spam)
Comment 15 Hossein 2022-04-29 23:15:45 UTC
Still reproducible in the latest 7.4 master:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: baa6531bf272265a31aed4ce54ffc6ef00e3a514
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 16 Commit Notification 2022-10-24 13:10:40 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ad7df41572d67687221cb43d53cde27a45fff0f

tdf#83671 make SmartArt visible in import of xlsx

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Regina Henschel 2022-10-24 14:40:24 UTC
The patch solves the case, that the SmartArt is imported as group of shapes. That is, the option "SmartArt to LO shapes or reverse" is "on" in Tools > Options > Load/Save > Microsoft Office.

I have an idea for the case SmartArt is imported as meta file, that is the option is "off". See attached patch. But I get some strange failure when loading an example file in a unit test.

The request to set the default for this option to "on", so that an ordinary user does not notice the missing part, is in bug 151734.
Comment 18 Regina Henschel 2022-10-24 14:41:49 UTC
Created attachment 183236 [details]
perhaps solution for case metafile
Comment 19 Commit Notification 2022-10-25 22:40:20 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17dfc9a9da009cc23d2222e3fb4e2cef9c97d581

tdf#83671 SmartArt: preserve pos and size for metafile

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Regina Henschel 2022-10-25 22:42:47 UTC
The strange failure was due to a missing component in the make file. The case metafile works now too.
Comment 21 Regina Henschel 2022-10-29 12:49:31 UTC
*** Bug 138283 has been marked as a duplicate of this bug. ***